# FareCastAI

./: .gitignore  README.md
Car_Price_Prediction_ML/: Design Document.md  pyproject.toml
Car_Price_Prediction_ML/src/configs/: config.py  settings.toml
